--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "yaipr"
 version = "0.1.0"
 authors = ["ThirtySomething <developer@derpaul.net>"]
 edition = "2018"
-homepage = "https://github.com/ThirtySomething/YAIP"
+homepage = "https://www.derpaul.net"
 repository = "https://github.com/ThirtySomething/YAIPR"
 license-file = "LICENSE.txt"
 keywords = ["ini parser", "ini", "parser", "rust"]
